<resources>
    <string name="app_name">InteractiveCarApp</string>
    <string name="create_account">Create New Account</string>
    <string name="vin">Vin Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="zip">Zip Code</string>
    <string name="email">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="login_text">Please sign in or\n create an account</string>
    <string name="switch_text">Keep me signed in</string>
    <string name="sign_in">Sign In</string>

    <string name="logout"><u>Logout</u></string>
    <string name="login"><u>Login</u></string>
    <string name="key_fob">Key Fob</string>
    <string name="door_locks">Door Locks</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="engine">Engine</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="dog_mode">Dog Mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="horn_lights">Horn &amp; Lights</string>
    <string name="on_off">ON/OFF</string>
    <string name="vehicle_status">Vehicle Status</string>
    <string name="fuel_level">Fuel Level</string>
    <string name="oil_life">Oil Life</string>
    <string name="fuel_level_text">Fuel at\n99%, no \n need to \n refill</string>
    <string name="oil_life_text">Oil life at\n85%,next oil\nchange at\n34,500 miles</string>
    <string name="tire_pressure">Tire Pressure</string>
    <string name="car">Car</string>
    <string name="left_front_tire_pressure">29---</string>
    <string name="left_rear_tire_pressure">30---</string>
    <string name="right_front_tire_pressure">---31</string>
    <string name="right_rear_tire_pressure">---30</string>
    <string name="odometer">Odometer</string>
    <string name="odometer_text">Your current odometer is 30,345 miles</string>
    <string name="cabin_temperature">Cabin Temperature</string>
    <string name="cabin_temperature_text">\t\t\t\t\t\\t\t\t\t\t\t Cabin temperature at 75°F</string>
    <string name="engine_temperature">Engine Temperature</string>
    <string name="engine_temperature_text">\t\tEngine temperature at 65°F</string>
    <string name="vehicle_location">Vehicle Location</string>
    <string name="locate_vehicle">Locate Vehicle</string>
    <string name="share_vehicle_location">Share Vehicle Location</string>
    <string name="mark_current_location">Mark Current Location</string>
    <string name="wifi_hotspot">Wi-Fi HotSpot</string>
    <string name="wifi_text">Please login with your Wi-Fi user id and password</string>
    <string name="wifi_ssid">SSID</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_switch">Enable/Disable</string>
    <string name="wifi_btn">Save</string>
    <string name="navigation">Navigation</string>
    <string name="send_navigation">Send to Vehicle</string>
    <string name="maintenance">Maintenance</string>
    <string name="schedule_maintenance">Schedule Maintenance</string>
    <string name="find_dealerships">Find Nearby Dealerships</string>
    <string name="roadside_assistance">Roadside Assistance</string>
    <string name="manual">Owner\'s Manual</string>
    <string name="manual_text">\t\t\t\t\t\t\t\tOwner\'s Manual</string>


</resources>