<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".CreateUserAct">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="109dp"
        android:layout_height="81dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/tvstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgUser"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFFFFF"
        android:text="@string/create_account"
        android:textColor="@color/babyblue" />

    <EditText
        android:id="@+id/etVin"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:hint="@string/vin"
        android:inputType="textCapCharacters"
        android:maxLength="17" />

    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etVin"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etFirstName"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etLastName"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapSentences" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/etAddy"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutName"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/etZip"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddy"
        android:hint="@string/zip"
        android:inputType="number"
        android:maxLength="5" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etZip"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="14" />

    <EditText
        android:id="@+id/etPass"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhone"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirm"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPass"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <android.widget.Button
        android:id="@+id/btnSignUp"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/balsamiqsans"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="12sp" />
</RelativeLayout>