<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WifiAct">

    <TextView
        android:id="@+id/tvWH"
        style="@style/tvstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/wifi_hotspot" />

    <ImageView
        android:id="@+id/imgWifi"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/tvWH"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/vehicle_location"
        android:padding="2dp"
        android:src="@drawable/wifi" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/tvstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgWifi"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/balsamiqsans"
        android:padding="20dp"
        android:text="@string/wifi_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etSSID"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogin"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/wifi_ssid"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSSID"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/wifi_password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/wifiSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:theme="@style/switch_style" />

    <TextView
        android:id="@+id/switchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiSwitch"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/wifi_switch"
        android:textColor="@color/babyblue"
        android:textSize="18sp" />

    <android.widget.Button
        android:id="@+id/wifiBtn"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchtext"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/wifi_btn" />


</RelativeLayout>