<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaintainAct">

    <TextView
        android:id="@+id/tvMaintain"
        style="@style/tvstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/maintenance"/>

    <ImageView
        android:id="@+id/imgMaintenance"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/tvMaintain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/vehicle_location"
        android:padding="2dp"
        android:src="@drawable/maintenance" />

    <android.widget.Button
        android:id="@+id/btnSchedule"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="60dp"
        android:layout_below="@id/imgMaintenance"
        android:layout_centerHorizontal="true"
        android:text="@string/schedule_maintenance" />

    <android.widget.Button
        android:id="@+id/btnFindDealer"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="120dp"
        android:layout_below="@id/btnSchedule"
        android:layout_centerHorizontal="true"
        android:text="@string/find_dealerships" />

    <android.widget.Button
        android:id="@+id/btnRoadside"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="120dp"
        android:layout_below="@id/btnFindDealer"
        android:layout_centerHorizontal="true"
        android:text="@string/roadside_assistance" />

</RelativeLayout>