<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocateAct">

    <TextView
        android:id="@+id/tvVL"
        style="@style/tvstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/vehicle_location" />

    <ImageView
        android:id="@+id/imgvehiclelocation"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_below="@id/tvVL"
        android:contentDescription="@string/vehicle_location"
        android:padding="2dp"
        android:src="@drawable/vehiclelocation" />

    <android.widget.Button
        android:id="@+id/btnLocateVehicle"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgvehiclelocation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/locate_vehicle" />

    <android.widget.Button
        android:id="@+id/btnLocate"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLocateVehicle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/share_vehicle_location" />

    <android.widget.Button
        android:id="@+id/btnWiFi"
        style="@style/btnstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLocate"
        android:layout_centerHorizontal="true"
        android:text="@string/mark_current_location" />


</RelativeLayout>